--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -41,7 +41,7 @@
                 <div class="description">查看评论意见</div>
                 <div class="ui top right attached pink label">New</div>
             </div>
-            <a href="{{ url_for('ins.advive_list') }}" class="ui attached button"><i
+            <a href="{{ url_for('ins.advice_list') }}" class="ui attached button"><i
                     class="comments icon"></i></a>
         </div>
     </div>
