修复建议状态判断；关闭建议时保存状态以便恢复；分权限显示建议状态

--- a/main/templates/ins/advice.html
+++ b/main/templates/ins/advice.html
@@ -34,14 +34,26 @@
                 <tr>
                     <td>状态</td>
                     <td>
-                        {% if advice.status == 0 %}
-                            未回复
-                        {% elif advice.status == 1 %}
-                            已回复
-                        {% elif advice.status == 2 %}
-                            新回复
+                        {% if current_user.can('ADVICE') %}
+                            {% if advice.status == 0 %}
+                                未回复
+                            {% elif advice.status == 1 %}
+                                对方已回复
+                            {% elif advice.status == 2 %}
+                                自己已回复
+                            {% else %}
+                                已完成
+                            {% endif %}
                         {% else %}
-                            已完成
+                            {% if advice.status == 0 %}
+                                未回复
+                            {% elif advice.status == 1 %}
+                                自己已回复
+                            {% elif advice.status == 2 %}
+                                对方已回复
+                            {% else %}
+                                已完成
+                            {% endif %}
                         {% endif %}
                     </td>
                 </tr>
@@ -71,7 +83,7 @@
             {% endfor %}
             {% if not current_user.can('ADVICE') and advice.comments[-1].author == current_user %}
                 <div class="ui warning message">您已经回复，请等待新回复</div>
-            {% elif advice.status > 0 %}
+            {% elif advice.status >= 0 %}
                 <form action="{{ url_for('ins.comment') }}" method="post" class="ui reply form">
                     <div class="field">
                         <div class="ui input">
@@ -94,11 +106,11 @@
             <form class="ui inline" method="post"
                   action="{{ url_for('ins.set_advice', advice_id=advice.id) }}">
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-                {% if advice.status > 0 %}
-                    <input type="hidden" name="status" value="-1">
+                {% if advice.status >= 0 %}
+                    <input type="hidden" name="status" value="{{ 0 - advice.status }}">
                     <button type="submit" class="ui negative button">点击完成并关闭评论区</button>
                 {% elif advice.status < 0 %}
-                    <input type="hidden" name="status" value="1">
+                    <input type="hidden" name="status" value="{{ 0 - advice.status }}">
                     <button type="submit" class="ui blue button">点击恢复并开启评论区</button>
                 {% endif %}
             </form>
