--- a/main/templates/ins/photos_list/set_public.html
+++ b/main/templates/ins/photos_list/set_public.html
@@ -159,7 +159,7 @@
         </div>
     </div>
     {% if photos %}
-        {{ pagination_widget(pagination, 'ins.photos_list', task_name_first=task_name_first, task_name_second=task_name_second, task_name_third=task_name_third, depart_id=depart_id) }}
+        {{ pagination_widget(pagination, 'ins.photos_list_set_public', task_name_first=task_name_first, task_name_second=task_name_second, task_name_third=task_name_third, depart_id=depart_id) }}
     {% endif %}
 {% endblock %}
 
