--- a/main/templates/ins/photos_list/advice.html
+++ b/main/templates/ins/photos_list/advice.html
@@ -150,7 +150,7 @@
         </div>
     </div>
     {% if photos %}
-        {{ pagination_widget(pagination, 'ins.photos_list', task_name_first=task_name_first, task_name_second=task_name_second, task_name_third=task_name_third, depart_id=depart_id) }}
+        {{ pagination_widget(pagination, 'ins.photos_list_advice', task_name_first=task_name_first, task_name_second=task_name_second, task_name_third=task_name_third, depart_id=depart_id) }}
     {% endif %}
     {% if depart_id != 0 and current_user.can('ADVICE') %}
         <div class="ui tall stacked segment">
