--- a/main/templates/main/intro.html
+++ b/main/templates/main/intro.html
@@ -100,7 +100,7 @@
         </div>
     </div>
     {% if photos %}
-        {{ pagination_widget(pagination, 'ins.photos_list', task_name_first=task_name_first, task_name_second=task_name_second, task_name_third=task_name_third, depart_id=depart_id) }}
+        {{ pagination_widget(pagination, 'main.intro', task_name_first=task_name_first, task_name_second=task_name_second, task_name_third=task_name_third, depart_id=depart_id) }}
     {% endif %}
 {% endblock %}
 
