“设置公开”页面添加“是否查看已审核”下拉框

--- a/main/templates/ins/photos_list/set_public.html
+++ b/main/templates/ins/photos_list/set_public.html
@@ -58,7 +58,7 @@
         】
     </div>
     <form action="" class="ui form" method="get">
-        <div class="three fields">
+        <div class="four fields">
             <div class="three wide field">
                 <label>任务分类一</label>
                 <select class="ui selection dropdown" id="task_name_first" name="task_name_first">
@@ -82,6 +82,13 @@
                 <label>任务分类三</label>
                 <select class="ui selection dropdown" id="task_name_third" name="task_name_third">
                     <option value="0">请先选择“任务分类二”</option>
+                </select>
+            </div>
+            <div class="three wide field">
+                <label>是否查看已审核</label>
+                <select class="ui selection dropdown" id="show_set" name="show_set">
+                    <option value="1" selected="selected">否</option>
+                    <option value="0">是</option>
                 </select>
             </div>
         </div>
