--- a/main/templates/admin/users_list.html
+++ b/main/templates/admin/users_list.html
@@ -23,6 +23,30 @@
             </h2>
         </div>
     </div>
+    {% if current_user.can('ADMINISTER') %}
+        <form action="" class="ui form" method="get">
+            <div class="one fields">
+                <div class="three wide field">
+                    <label>部门</label>
+                    <select class="ui selection dropdown" id="depart_id" name="depart_id">
+                        <option value=0>==请选择==</option>
+                        <option value=1>本科生第一支部</option>
+                        <option value=2>本科生第二支部</option>
+                        <option value=3>研究生第一支部</option>
+                        <option value=4>研究生第二支部</option>
+                        <option value=5>研究生第三支部</option>
+                        <option value=6>教工第一支部</option>
+                        <option value=7>教工第二支部</option>
+                        <option value=8>计算机系支部</option>
+                    </select>
+                </div>
+            </div>
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+            <input class="ui positive button" type="submit" value="筛选">
+            <input class="ui negative button" type="reset"
+                   onclick=window.location.href=("{{ url_for('admin.users_list') }}"); value="清空">
+        </form>
+    {% endif %}
     {{ message_part() }}
     <table id="users_list_table" class="tablesorter ui sortable unstackable celled striped brown compact table">
         <thead>
