--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -19,21 +19,21 @@
             </div>
             <a href="{{ url_for('user.upload') }}" class="ui attached button"><i class="image icon"></i></a>
         </div>
-        <div class="green card">
-            <div class="content">
-                <div class="header">注册用户</div>
-                <div class="description">注册新用户</div>
-            </div>
-            <a href="{{ url_for('admin.register') }}" class="ui attached button"><i
-                    class="comments icon"></i></a>
-        </div>
-        <div class="brown card">
+        <div class="teal card">
             <div class="content">
                 <div class="header">管理用户</div>
                 <div class="description">查看所有用户</div>
-                <div class="ui top right attached pink label">New</div>
             </div>
             <a href="{{ url_for('admin.users_list') }}" class="ui attached button"><i
+                    class="comments icon"></i></a>
+        </div>
+        <div class="violet card">
+            <div class="content">
+                <div class="header">管理部门</div>
+                <div class="description">查看所有部门</div>
+                <div class="ui top right attached pink label">New</div>
+            </div>
+            <a href="{{ url_for('admin.departs_list') }}" class="ui attached button"><i
                     class="comments icon"></i></a>
         </div>
         <div class="blue card">
